fixed a regression in the text labels on modals sign up and login not showing and being white and font being oversized

--- a/project/client/like-home/src/stylesheets/SignUp.scss
+++ b/project/client/like-home/src/stylesheets/SignUp.scss
@@ -65,6 +65,11 @@ label {
     padding-top: 0px;
 }
 
+b {
+  font-size: 16px;
+  color: black;
+}
+
 .closebutton {
   float: right;
   border-radius: 30px;
